--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,6 +12,9 @@
   <body>
 
     {{{body}}}
+    <a href="/user/signup">Sign up</a>
+    <br>
+    <a href="/user/login">Log in</a>
 
     <script src="/js/script.js"></script>
   </body>
